RESOLVED FIXED149177
AX: No VO typing feedback in some text fields
https://bugs.webkit.org/show_bug.cgi?id=149177
Summary AX: No VO typing feedback in some text fields
James Craig
Reported 2015-09-15 12:05:31 PDT
Created attachment 261221 [details] test case 1. Load attached test case on iOS. 2. Focus the field with VO and use split-tap typing. 3. Instead of character echo for each insertion, VO bonks. Starting with WebKit since the seems limited to this context.
Attachments
test case (2.24 KB, text/html)
2015-09-15 12:05 PDT, James Craig
no flags
patch (3.65 KB, patch)
2015-09-15 16:44 PDT, chris fleizach
no flags
patch (3.66 KB, patch)
2015-09-15 16:46 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2015-09-15 12:06:14 PDT
chris fleizach
Comment 2 2015-09-15 12:12:30 PDT
accessibilityValue is an empty string
chris fleizach
Comment 3 2015-09-15 16:44:17 PDT
chris fleizach
Comment 4 2015-09-15 16:46:31 PDT
WebKit Commit Bot
Comment 5 2015-09-16 08:03:01 PDT
Comment on attachment 261264 [details] patch Clearing flags on attachment: 261264 Committed r189862: <http://trac.webkit.org/changeset/189862>
WebKit Commit Bot
Comment 6 2015-09-16 08:03:06 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 7 2015-09-16 22:51:59 PDT
accessibility/ax-value-with-search.html fails on Windows: -PASS search.stringValue is 'AXValue: hello' -PASS search.stringValue is 'AXValue: test' +FAIL search.stringValue should be AXValue: hello. Threw exception TypeError: undefined is not an object (evaluating 'search.stringValue') +FAIL search.stringValue should be AXValue: test. Threw exception TypeError: undefined is not an object (evaluating 'search.stringValue') PASS successfullyParsed is true
chris fleizach
Comment 8 2015-09-16 23:38:15 PDT
(In reply to comment #7) > accessibility/ax-value-with-search.html fails on Windows: > > -PASS search.stringValue is 'AXValue: hello' > -PASS search.stringValue is 'AXValue: test' > +FAIL search.stringValue should be AXValue: hello. Threw exception > TypeError: undefined is not an object (evaluating 'search.stringValue') > +FAIL search.stringValue should be AXValue: test. Threw exception TypeError: > undefined is not an object (evaluating 'search.stringValue') > PASS successfullyParsed is true Looks like another test we need to skip on Win. stringValue is likely not implemented
Alex Christensen
Comment 9 2015-09-17 09:52:13 PDT
(In reply to comment #8) > (In reply to comment #7) > > accessibility/ax-value-with-search.html fails on Windows: > > > > -PASS search.stringValue is 'AXValue: hello' > > -PASS search.stringValue is 'AXValue: test' > > +FAIL search.stringValue should be AXValue: hello. Threw exception > > TypeError: undefined is not an object (evaluating 'search.stringValue') > > +FAIL search.stringValue should be AXValue: test. Threw exception TypeError: > > undefined is not an object (evaluating 'search.stringValue') > > PASS successfullyParsed is true > > Looks like another test we need to skip on Win. stringValue is likely not > implemented Skipped the test in r189915
Note You need to log in before you can comment on or make changes to this bug.