Source/WebCore: AX: No VoiceOver typing feedback in some search fields https://bugs.webkit.org/show_bug.cgi?id=149177

Reviewed by Mario Sanchez Prada.

If SearchFieldRole is not marked as a TextControl, it does not end up returning the accessibilityValue,
which is needed to output the right text to VoiceOver.

Test: accessibility/ax-value-with-search.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isTextControl):

LayoutTests:
AX: No VO typing feedback in some text fields
https://bugs.webkit.org/show_bug.cgi?id=149177

Reviewed by Mario Sanchez Prada.

* accessibility/ax-value-with-search-expected.txt: Added.
* accessibility/ax-value-with-search.html: Added.


Canonical link: https://commits.webkit.org/167315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189862 268f45cc-cd09-0410-ab3c-d52691b4dbfc